--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+#   Api Variables
+###################################
 PORT=3001
+###################################
+#   Database Variables
+###################################
+DB_HOST=localhost
+DB_USERNAME=postgres
+DB_PASSWORD=mysecretpassword
+DB_NAME=bookstore
+###################################
