config auth module

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 #   Api Variables
 ###################################
 PORT=3001
+JWT_SECRECT=asdsa4651sdas<>asda
 ###################################
 #   Database Variables
 ###################################
