dokerizando la api

--- a/.env
+++ b/.env
@@ -5,8 +5,9 @@ JWT_SECRECT=asdsa4651sdas<>asda
 ###################################
 #   Database Variables
 ###################################
-DB_HOST=localhost
+DB_HOST=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=mysecretpassword
 DB_NAME=bookstore
+DB_PORT=5432
 ###################################
