--- a/orm.config.json
+++ b/orm.config.json
@@ -2,8 +2,8 @@
     "type": "postgres",
     "username": "postgres",
     "password": "mysecretpassword",
-    "host": "localhost",
-    "port": 5444,
+    "host": "postgres",
+    "port": "5432",
     "database": "bookstore",
     "entities": ["src/**/**/*.entity{.ts,.js}"],
     "migrations": ["src/database/migrations/*{.ts,.js}"],
